tests/snapshots/test_java__basic_with_log_unix.snap
---
source: tests/test_java.rs
info:
  program: log2src
  args:
    - "-d"
    - tests/java/BasicWithLog.java
    - "-l"
    - tests/resources/java/basic.log
    - "-f"
    - "\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}:\\d{2} \\w+ \\w+ \\w+: (?<body>.*)"
---
success: true
exit_code: 0
----- stdout -----
{"srcRef":{"sourcePath":"tests/java/BasicWithLog.java","lineNumber":18,"column":13,"name":"main","text":"\"Hello from main\"","args":[],"vars":[]},"variables":{},"stack":[]}
{"srcRef":{"sourcePath":"tests/java/BasicWithLog.java","lineNumber":25,"column":17,"name":"foo","text":"\"Hello from foo i=\\{i}\"","args":["Placeholder"],"vars":["i"]},"variables":{"i":"0"},"stack":[]}
{"srcRef":{"sourcePath":"tests/java/BasicWithLog.java","lineNumber":25,"column":17,"name":"foo","text":"\"Hello from foo i=\\{i}\"","args":["Placeholder"],"vars":["i"]},"variables":{"i":"1"},"stack":[]}
{"srcRef":{"sourcePath":"tests/java/BasicWithLog.java","lineNumber":25,"column":17,"name":"foo","text":"\"Hello from foo i=\\{i}\"","args":["Placeholder"],"vars":["i"]},"variables":{"i":"2"},"stack":[]}

----- stderr -----
