tests/snapshots/test_java__invalid_log_path.snap
---
source: tests/test_java.rs
info:
  program: log2src
  args:
    - "-d"
    - tests/java/Basic.java
    - "-l"
    - badname.log
    - "-f"
    - "\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}:\\d{2} \\w+ \\w+ \\w+: (?<body>.*)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error:   × cannot read log file "badname.log"
  ╰─▶ {errmsg} (os error 2)
